# music-player-old

./: bun.lockb  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  library.rs  main.rs  metadata.rs
src/components/: AlbumList.tsx  ArtistList.tsx  SongList.tsx
src/components/layout/: Header.tsx
src/components/setup/: AdditionalSettings.tsx  LibrarySelection.tsx  ThemeSelection.tsx  Welcome.tsx
src/components/ui/: button.tsx  dialog.tsx  spinner.tsx  switch.tsx
src/screens/: MusicScreen.tsx  SettingsScreen.tsx  SetupScreen.tsx
src/util/: config.ts
